Add status indicator

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <div class="controls">
     <button onclick="sendProcessRequest('restart')">Restart code</button>
     <button onclick="sendProcessRequest('kill')">Kill</button>
+    <span id="status"></span>
 </div>
 <div id="log">
 
