Fix control bar position to top of screen

--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
         </div>
     </div>
 </div>
-<table class="table is-striped is-narrow is-hoverable is-fullwidth is-family-monospace">
+<table class="log-table table is-striped is-narrow is-hoverable is-fullwidth is-family-monospace">
     <tbody id="log"></tbody>
 </table>
 
