--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div class="controls">
-    <div class="field has-addons">
+    <div class="field has-addons control-buttons">
         <p class="control">
             <button class="button" data-action="start" title="Start">
             <span class="icon has-text-success">
