Update message in "Disconnnected" modal to refer to the support forum

--- a/src/index.html
+++ b/src/index.html
@@ -117,7 +117,7 @@
     <div class="modal-card">
         <section class="modal-card-body">
             <h1 class="title">Connecting to robot&hellip;</h1>
-            <p>If you find this is taking longer than a minute to connect, try refreshing the page or power cycling your robot. If issues persist, send us a message in the #kit channel in Discord.</p>
+            <p>If you find this is taking longer than a minute to connect, try refreshing the page or power cycling your robot. If issues persist, send us a message in the support forum in Discord under the Kit tag.</p>
 
             <progress id="serviceProgress" class="progress is-primary" max="4"></progress>
         </section>
