--- a/src/index.html
+++ b/src/index.html
@@ -76,11 +76,11 @@
             <span class="mobile-control-label">Mode</span>
             <ul class="radio-buttons">
                 <li>
-                    <input type="radio" name="mode" id="mode-dev" value="DEV" class="sends-mutate-request" checked>
+                    <input type="radio" data-property="mode" name="mode" id="mode-dev" value="DEV" class="sends-mutate-request">
                     <label for="mode-dev">Development</label>
                 </li>
                 <li>
-                    <input type="radio" name="mode" id="mode-comp" value="COMP" class="sends-mutate-request">
+                    <input type="radio" data-property="mode" name="mode" id="mode-comp" value="COMP" class="sends-mutate-request">
                     <label for="mode-comp">Competition</label>
                 </li>
             </ul>
@@ -89,19 +89,19 @@
             <span class="mobile-control-label" style="margin-right: 0.85rem;">Zone</span>
             <ul class="radio-buttons">
                 <li class="compact">
-                    <input type="radio" name="zone" id="zone-0" value="0" class="sends-mutate-request" checked>
+                    <input type="radio" data-property="zone" name="zone" id="zone-0" value="0" class="sends-mutate-request">
                     <label for="zone-0">0</label>
                 </li>
                 <li class="compact">
-                    <input type="radio" name="zone" id="zone-1" value="1" class="sends-mutate-request">
+                    <input type="radio" data-property="zone" name="zone" id="zone-1" value="1" class="sends-mutate-request">
                     <label for="zone-1">1</label>
                 </li>
                 <li class="compact">
-                    <input type="radio" name="zone" id="zone-2" value="2" class="sends-mutate-request">
+                    <input type="radio" data-property="zone" name="zone" id="zone-2" value="2" class="sends-mutate-request">
                     <label for="zone-2">2</label>
                 </li>
                 <li class="compact">
-                    <input type="radio" name="zone" id="zone-3" value="3" class="sends-mutate-request">
+                    <input type="radio" data-property="zone" name="zone" id="zone-3" value="3" class="sends-mutate-request">
                     <label for="zone-3">3</label>
                 </li>
             </ul>
