Fix bug with autoscroll

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body>
-<div class="controls">
+<div class="controls" id="controls">
     <div class="field has-addons control-buttons">
         <p class="control">
             <button class="button" data-action="start" title="Start">
