--- a/src/index.html
+++ b/src/index.html
@@ -228,14 +228,23 @@
       <div class="modal-background modal-background-close"></div>
       <div class="modal-card">
         <header class="modal-card-head">
-          <p class="modal-card-title">Robot Information</p>
+          <p class="modal-card-title" id="info-os-version"></p>
           <button class="delete" aria-label="close"></button>
         </header>
         <section class="modal-card-body">
-          <p>OS Version: <span id="info-os-version"></span></p>
-          <p>Kit UI Version: <span id="info-kit-ui-version"></span></p>
-          <p>WiFi Network: <span id="info-wifi-ssid"></span></p>
-          <p>WiFi Password: <span id="info-wifi-secret"></span></p>
+          <div class="columns is-flex is-vcentered">
+            <div class="column">
+              <p>Kit UI Version: <code id="info-kit-ui-version"></code></p>
+              <p>Python Version: <code id="info-python-version"></code></p>
+              <p>Entrypoint: <code id="info-entrypoint"></code></p>
+              <p>WiFi Network: <code id="info-wifi-ssid"></code></p>
+              <p>WiFi Password: <code id="info-wifi-secret"></code></p>
+            </div>
+            <div class="column has-text-centered">
+              <p>Join other devices to the WiFi network by scanning the QR Code below:</p>
+              <canvas id="qrcode-wifi"></canvas>
+            </div>
+          </div>
         </section>
         <footer class="modal-card-foot">
         </footer>
