Format using prettier

--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,11 @@
           </span>
         </div>
         <div class="control">
-          <span class="modal-trigger button" data-target="modal-info" tabindex="0">
+          <span
+            class="modal-trigger button"
+            data-target="modal-info"
+            tabindex="0"
+          >
             <span class="icon has-text-link">
               <span class="mdi mdi-24px mdi-information"></span>
             </span>
@@ -102,7 +106,11 @@
           </span>
         </div>
         <div class="control">
-          <span tabindex="0" class="button modal-trigger" data-target="modal-info">
+          <span
+            tabindex="0"
+            class="button modal-trigger"
+            data-target="modal-info"
+          >
             <span class="icon has-text-link">
               <span class="mdi mdi-24px mdi-information" />
             </span>
@@ -241,13 +249,15 @@
               <p>WiFi Password: <code id="info-wifi-secret"></code></p>
             </div>
             <div class="column has-text-centered">
-              <p>Join other devices to the WiFi network by scanning the QR Code below:</p>
+              <p>
+                Join other devices to the WiFi network by scanning the QR Code
+                below:
+              </p>
               <canvas id="qrcode-wifi"></canvas>
             </div>
           </div>
         </section>
-        <footer class="modal-card-foot">
-        </footer>
+        <footer class="modal-card-foot"></footer>
       </div>
     </div>
 
