Update placeholder text for when no image

--- a/src/index.html
+++ b/src/index.html
@@ -288,9 +288,8 @@
         </header>
         <section class="modal-card-body">
           <p id="no-annotated-image-instructions">
-            Use <code>R.camera.see()</code> or
-            <code>R.camera.see_ids()</code> in your robot code to see an
-            annotated image.
+            Use <code>robot.camera.see()</code>
+            in your robot code to see an annotated image.
           </p>
           <img id="last-annotated-image" />
         </section>
