--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#3270ed" />
     <title>Robot</title>
-    <link
-      rel="stylesheet"
-      href="../node_modules/@mdi/font/css/materialdesignicons.min.css"
-    />
+    <link rel="stylesheet" href="../node_modules/material-symbols/index.css" />
     <link rel="stylesheet" href="style.scss" />
     <link rel="shortcut icon" href="favicon.ico" />
   </head>
@@ -19,28 +16,28 @@
         <p class="control">
           <button class="button" data-action="start" title="Start">
             <span class="icon has-text-success">
-              <span class="mdi mdi-24px mdi-play"></span>
+              <span class="material-symbols-outlined">play_arrow</span>
             </span>
           </button>
         </p>
         <p class="control">
           <button class="button" data-action="restart" title="Restart">
             <span class="icon has-text-success">
-              <span class="mdi mdi-24px mdi-restart"></span>
+              <span class="material-symbols-outlined">restart_alt</span>
             </span>
           </button>
         </p>
         <p class="control">
           <button class="button" data-action="kill" title="Kill">
             <span class="icon has-text-danger">
-              <span class="mdi mdi-24px mdi-close-octagon"></span>
+              <span class="material-symbols-outlined">dangerous</span>
             </span>
           </button>
         </p>
         <p class="control">
           <button class="button" data-action="clearLog" title="Clear log">
             <span class="icon has-text-link">
-              <span class="mdi mdi-24px mdi-delete-sweep"></span>
+              <span class="material-symbols-outlined">delete_sweep</span>
             </span>
           </button>
         </p>
@@ -55,7 +52,10 @@
             style="display: none"
           >
             <span class="icon has-text-link">
-              <span id="toggle-theme-icon" class="mdi mdi-24px"></span>
+              <span
+                id="toggle-theme-icon"
+                class="material-symbols-outlined"
+              ></span>
             </span>
           </span>
         </div>
@@ -66,7 +66,7 @@
             data-target="modal-camera"
           >
             <span class="icon has-text-link">
-              <span class="mdi mdi-24px mdi-camera" />
+              <span class="material-symbols-outlined">camera</span>
             </span>
           </span>
         </div>
@@ -77,7 +77,7 @@
             tabindex="0"
           >
             <span class="icon has-text-link">
-              <span class="mdi mdi-24px mdi-information"></span>
+              <span class="material-symbols-outlined">info</span>
             </span>
           </span>
         </div>
@@ -112,7 +112,7 @@
         <div class="control">
           <span id="mobile-metadata-toggle" tabindex="0" class="button">
             <span class="icon has-text-link">
-              <span class="mdi mdi-24px mdi-cog" />
+              <span class="material-symbols-outlined">settings</span>
             </span>
           </span>
         </div>
@@ -123,7 +123,7 @@
             data-target="modal-info"
           >
             <span class="icon has-text-link">
-              <span class="mdi mdi-24px mdi-information" />
+              <span class="material-symbols-outlined">info</span>
             </span>
           </span>
         </div>
@@ -134,7 +134,7 @@
             data-target="modal-camera"
           >
             <span class="icon has-text-link">
-              <span class="mdi mdi-24px mdi-camera" />
+              <span class="material-symbols-outlined">camera</span>
             </span>
           </span>
         </div>
@@ -146,7 +146,10 @@
             style="display: none"
           >
             <span class="icon has-text-link">
-              <span id="mobile-toggle-theme-icon" class="mdi mdi-24px"></span>
+              <span
+                id="mobile-toggle-theme-icon"
+                class="material-symbols-outlined"
+              ></span>
             </span>
           </span>
         </div>
