--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#3270ed" />
     <title>Robot</title>
-    <link rel="stylesheet" href="../node_modules/material-symbols/index.css" />
-    <link rel="stylesheet" href="style.scss" />
-    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="stylesheet" href="node_modules/material-symbols/index.css" />
+    <link rel="stylesheet" href="src/style.scss" />
+    <link rel="shortcut icon" href="src/favicon.ico" />
   </head>
 
   <body>
@@ -306,6 +306,6 @@
       </div>
     </template>
 
-    <script src="main.js" type="module"></script>
+    <script src="src/main.js" type="module"></script>
   </body>
 </html>
