Performance improvements/rework autoscroll

--- a/index.html
+++ b/index.html
@@ -234,7 +234,11 @@
         </div>
       </div>
     </div>
-    <div class="log-list" id="log"></div>
+    <div class="log-list" id="log" data-autoscroll="true">
+      <button class="button is-primary is-rounded log-list-scroll" id="scroll-to-bottom">
+        <span class="material-symbols-outlined">arrow_downward</span>
+      </button>
+    </div>
 
     <div class="modal is-active" id="modal-disconnected">
       <div class="modal-background"></div>
